--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,12 @@
 
 .relative input:focus + label,
 .relative input:not(:placeholder-shown) + label {
-    top: -20px;
-    left: 2px;
-    font-size: 0.75rem;
-    color: #414e6e;
+  top: -20px;
+  left: 2px;
+  font-size: 0.75rem;
+  color: #414e6e;
 }
 
-::-ms-reveal {
-    filter: invert(100%);
+.custom-password-field input::-ms-reveal {
+  filter: invert(100%);
 }
