--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,13 @@
 .custom-password-field input::-ms-reveal {
   filter: invert(100%);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+/* Hide spin buttons in Firefox */
+input[type=number] {
+-moz-appearance: textfield;
+}
